# cg-bundler

./: LICENSE  README.md  pyproject.toml
bundler/: __main__.py
