[tool.poetry]
name = "cg-bundler"
version = "0.1.0"
description = ""
authors = ["Daniel Trowbridge <blujupiter32@pm.me>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
